# veda-backend

./: .dockerignore  .example.env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  app.py  cdk.json  config.py  dev-requirements.txt  docker-compose.local.yml  docker-compose.yml  permission_boundary.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
common_auth/: auth.py  pyproject.toml
stac-auth-proxy/: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
stac-auth-proxy/examples/custom-integration/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
stac-auth-proxy/examples/custom-integration/src/: custom_integration.py
stac-auth-proxy/examples/opa/: README.md  docker-compose.yaml
stac-auth-proxy/helm/: Chart.yaml  README.md  values.schema.yaml  values.yaml
stac-auth-proxy/helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
stac-auth-proxy/src/stac_auth_proxy/: __init__.py  __main__.py  app.py  config.py
stac-auth-proxy/src/stac_auth_proxy/filters/: __init__.py  opa.py  template.py
stac-auth-proxy/src/stac_auth_proxy/handlers/: __init__.py  healthz.py  reverse_proxy.py  swagger_ui.py
stac-auth-proxy/src/stac_auth_proxy/middleware/: AddProcessTimeHeaderMiddleware.py  ApplyCql2FilterMiddleware.py  AuthenticationExtensionMiddleware.py  BuildCql2FilterMiddleware.py  EnforceAuthMiddleware.py  ProcessLinksMiddleware.py  RemoveRootPathMiddleware.py  __init__.py  (+1 more)
stac-auth-proxy/tests/: conftest.py  test_auth_extension.py  test_authn.py  test_cache.py  test_defaults.py  test_filters_jinja2.py  test_filters_opa.py  test_lifespan.py  test_middleware.py  test_openapi.py  test_process_links.py  test_proxy.py  test_remove_root_path.py  test_reverse_proxy.py  test_utils.py  utils.py
(+253 files in other folders)
